--- a/_config.yml
+++ b/_config.yml
@@ -69,9 +69,9 @@ apps:
 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
 additionalinfo: |
-   Game Name: 撲克龍王 (March 2007 ~ June 2007)
-   Duration: 4 Months
-   Platform: Arcade Game
+<br>   Game Name: 撲克龍王 (March 2007 ~ June 2007)
+<br>   Duration: 4 Months
+<br>   Platform: Arcade Game
    Description: A classic video poker game with an extra sixth card. Player may bet with any amount for a game and payout with the patterns. Two jokers is included in the game so as to make more fun.
    Scale: 1 programmer + 1 designer
    Duty: All the coding staff including game flow, game logic, graphic, hardware button input.
