--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,8 @@ apps:
 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
 additionalinfo: |
+<html>
+<body>
 <br>   Game Name: 撲克龍王 (March 2007 ~ June 2007)
 <br>   Duration: 4 Months
 <br>   Platform: Arcade Game
@@ -150,3 +152,5 @@ additionalinfo: |
    Programming Language:
       Client: Unity3D using C# script
       Server: PHP, Node.js, MySQL, AWS, Docker
+</body>
+</html>
