--- a/_config.yml
+++ b/_config.yml
@@ -68,11 +68,10 @@ apps:
    description: Monopoly game using cards
 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
-additionalinfo: |
-<p>
-<br>   Game Name: 撲克龍王 (March 2007 ~ June 2007)
-<br>   Duration: 4 Months
-<br>   Platform: Arcade Game
+additionalinfo:|
+\n\tGame Name: 撲克龍王 (March 2007 ~ June 2007)
+   Duration: 4 Months
+   Platform: Arcade Game
    Description: A classic video poker game with an extra sixth card. Player may bet with any amount for a game and payout with the patterns. Two jokers is included in the game so as to make more fun.
    Scale: 1 programmer + 1 designer
    Duty: All the coding staff including game flow, game logic, graphic, hardware button input.
