--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,9 @@ apps:
 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
 additionalinfo: |
-\n\tGame Name: 撲克龍王 (March 2007 ~ June 2007)
+
+<p>
+   Game Name: 撲克龍王 (March 2007 ~ June 2007)
    Duration: 4 Months
    Platform: Arcade Game
    Description: A classic video poker game with an extra sixth card. Player may bet with any amount for a game and payout with the patterns. Two jokers is included in the game so as to make more fun.
@@ -150,3 +152,4 @@ additionalinfo: |
    Programming Language:
       Client: Unity3D using C# script
       Server: PHP, Node.js, MySQL, AWS, Docker
+</p>
