--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ apps:
 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
 additionalinfo: |
-   Game Name： 撲克龍王 (March 2007 ~ June 2007)
+   Game Name： 撲克龍王 (March 2007 ~ June 2007)<br>
    
    Duration： 4 Months
    
